# studies-haskell

./: .gitignore  Makefile  README.md  commands.tex
cheatsheets/: symbol.tex
h99/: CHANGELOG.md  README.md  h99.cabal  hie.yaml  p1-10.hs  p11-20.hs  p21-28.hs  p31-41.hs  p46-50.hs  p55-60.hs
haskell_in_depth/: Ch1 Functions and types.tex  main.tex
lc/: lc38.hs
learn_me_a_haskell/: CHANGELOG.md  Ch01 Introduction.tex  Ch02 Starting Out.tex  Ch03 Types and Typeclasses.tex  Ch04 Syntax in Functions.tex  Ch05 Recursion.tex  Ch06 Higher Order Functions.tex  Ch07 Modules.tex  Ch08 Making Our Own Types and Typeclasses.tex  Ch09 Input and Output.tex  Ch10 Functionally Solving Problems.tex  Ch11 Functors, Applicative Functors and Monoids.tex  Ch12 A Fistful of Monads.tex  Ch13 For a Few Monads More.tex  Ch14 Zippers.tex  learn-me-a-haskell.cabal  main.tex
learn_me_a_haskell/code/: Geometry.hs  Setup.hs  algoEuclid.hs  arg-test.hs  argTest.hs  askForNumber.hs  byteStringCopy.hs  capslocker.hs  chessKnight.hs  deletetodo.hs  differenceLists.hs  doNotation.hs  fmappingIO.hs  focusingOnLists.hs  girlfriend.hs  heathrow.hs  higherOrderFns.hs  higher_order_fns.hs  lengthCompare.hs  letBindingsInDo.hs  let_bindings_in_do.hs  linecount.hs  linecount2.hs  linecount3.hs  makingMonads.hs  modules.hs  multWithLog.hs  newtype.hs  ownRandom.hs  ownTypes.hs  ownTypes2.hs  ownTypes3.hs  own_types.hs  own_types2.hs  own_types3.hs  palindrome.hs  poleAndBirds.hs  randomString.hs  readWriteAppend.hs  read_write_append.hs  (+20 more)
learn_me_a_haskell/code/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
learn_real_world_haskell/: Ch10 Code case study: parsing a binary data format.tex  Ch11 Testing and quality assurance.tex  Ch12 Barcode recognition.tex  Ch13 Data structures.tex  Ch14 Monads.tex  Ch15 Programming with monads.tex  Ch18 Monad transformers.tex  Ch2 Types and functions.tex  Ch24 Basic concurrent and parallel programming.tex  Ch5 Writing a library: working with JSON data.tex  Ch6 Using typeclasses.tex  Ch7 Input and output.tex  Ch8 Efficient file processing, regular expressions, and file name matching.tex  Ch9 IO case study: a library for searching the filesystem.tex  main.tex
learn_real_world_haskell/code/Ch05/: CHANGELOG.md  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  README.md  Setup.hs  SimpleJSON.hs  install.sh  pretty-json.cabal  uninstall.sh
learn_real_world_haskell/code/Ch06/: CHANGELOG.md  Ch06.cabal  DataEither.hs  JSONClass.hs  Overlap.hs  SimpleClass.hs  naiveeq.hs  read.hs
learn_real_world_haskell/code/Ch07/: actions.hs  actions2.hs  basicio-nodo.hs  basicio.hs  filter.hs  return1.hs  return2.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy4.hs  toupper-lazy5.hs  toupper-lazy6.hs
learn_real_world_haskell/code/Ch08/: CHANGELOG.md  ElfMagic.hs  Glob.hs  GlobRegex.hs  GlobRegexEither.hs  HighestClose.hs  SumFile.hs  Userful.hs  hie.yaml  my-regex.cabal
learn_real_world_haskell/code/Ch08/app/: Main.hs
learn_real_world_haskell/code/Ch09/: BetterPredicate.hs  CHANGELOG.md  ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs  hie.yaml  my-recursive.cabal
learn_real_world_haskell/code/Ch10/: CHANGELOG.md  EitherInt.hs  EitherIntFlexible.hs  PNM.hs  Parse.hs  TreeMap.hs  TypeConstraint.hs  ValidFunctor.hs  hie.yaml  my-parser.cabal
learn_real_world_haskell/code/Ch11/: Arbitraray.hs  Arbitrary.hs  CHANGELOG.md  Prettify2.hs  QC-basics.hs  QC.hs  Run.hs  my-test.cabal
learn_real_world_haskell/code/Ch12/: Barcode.hs  CHANGELOG.md  PNM.hs  Parse.hs  my-barcode.cabal
learn_real_world_haskell/code/Ch13/: CHANGELOG.md  DList.hs  DataSequence.hs  buildmap.hs  funcrecs.hs  funcrecs2.hs  lookup.hs  my-data-structures.cabal  num.hs  numsimple.hs  passwd-al.hs  passwdmap.hs
learn_real_world_haskell/code/Ch14/: CHANGELOG.md  CaresianProduct.hs  Carrier.hs  LICENSE  Logger.hs  MultiplyTo.hs  Random.hs  SimpleState.hs  State.hs  hie.yml  my-monads.cabal
learn_real_world_haskell/code/Ch15/: CHANGELOG.md  hie.yaml  my-monads-program.cabal
learn_real_world_haskell/code/Ch15/src/: HandleIO.hs  MonadHandle.hs  MonadHandleIO.hs  MovieReview.hs  MyLib.hs  RandomSupply.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  VCard.hs  WriterIO.hs
learn_real_world_haskell/code/Ch18/: CHANGELOG.md  hie.yaml  my-mtrans.cabal
learn_real_world_haskell/code/Ch18/src/: CountEntries.hs  CountEntriesT.hs  CustomT.hs  LocalReader.hs  MTComposition.hs  MaybeT.hs  MaybeT2.hs  MaybeTParse.hs  MyLib.hs  StackStack.hs  UglyStack.hs  UseStateT.hs
learn_real_world_haskell/code/Ch24/: CHANGELOG.md  Chan.hs  CommonURLs.hs  Compressor.hs  Expensive.hs  LineChunks.hs  LineCount.hs  LockHierarchy.hs  MVarExample.hs  MapReduce.hs  ModifyMVar.hs  ModifyMVarStrict.hs  NiceFork.hs  NumCapabilities.hs  ParMap.hs  SortMain.hs  Sorting.hs  Strat.hs  hie.yaml  my-concurrent.cabal
tests/: baby.hs  hello.hs  syntax_in_fns.hs
