cabal-version:      2.4
name:               pretty-json
version:            0.1.0.0
synopsis:           My pretty printing library, with JSON support
description:
  A simple pretty printing library that illustrates how to
  develop a Haskell library.

-- A URL where users can report bugs.
-- bug-reports:

-- license:
author:             jacob xie
maintainer:         jacobbishopxy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library
  default-language: Haskell2010
  build-depends:    base
  exposed-modules:
    Prettify
    PrettyJSON
    SimpleJSON

executable pretty-json
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.16.4.0
  hs-source-dirs:   app
  default-language: Haskell2010
