cabal-version:      2.4
name:               my-regex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jacob
maintainer:         jacobbishopxy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  build-depends:
    , base
    , directory
    , filepath
    , regex-posix  ^>=0.96.0.1

  exposed-modules:
    Glob
    GlobRegex
    GlobRegexEither
    Useful

executable my-regex
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base         ^>=4.16.4.0
    , regex-posix  ^>=0.96.0.1

  hs-source-dirs:   app
  default-language: Haskell2010
