cabal-version:      2.4
name:               my-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jacob
maintainer:         jacobbishopxy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  build-depends:
    , base
    , QuickCheck

  exposed-modules:  Prettify2
