cabal-version:   3.0
name:            my-mtrans
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          jacob
maintainer:      jacobbishopxy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    CountEntries
    CountEntriesT
    MaybeT
    MaybeTParse
    MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base          ^>=4.19.1.0
    , bytestring
    , directory
    , dlist
    , filepath
    , mtl
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
