cabal-version:   3.0
name:            my-concurrent
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          jacob
maintainer:      jacobbishopxy@gmail.com

-- copyright:
category:        Concurrency
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  build-depends:
    , base
    , containers
    , parallel
    , random
    , time

  default-language: Haskell2010
  hs-source-dirs:   .
  exposed-modules:  NiceFork

executable sort-main
  import:           warnings
  default-language: Haskell2010
  main-is:          SortMain.hs
  ghc-options:      -threaded -O2
  build-depends:
    , base
    , my-concurrent
    , parallel
    , random
    , time
